# eggwiki

./: .coveragerc  .gitattributes  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.override.yml.skeleton  docker-compose.yml  install.sh  pyproject.toml  settings.cfg.skeleton  start.sh  tbump.toml
docker/: entrypoint.sh  uwsgi.ini
docs/plugin_examples/plugin_authorsignature/: otterwiki_authorsignature.py
docs/plugin_examples/plugin_noemojis/: otterwiki_noemojis.py  pyproject.toml
eggwiki/: about.md  auth.py  help.md  help_admin.md  initial_home.md  manifest.json  plugins.py  preferences.py  remote.py  renderer.py  renderer_plugins.py  server.py  sidebar.py  views.py
eggwiki/static/: manifest.json
eggwiki/static/css/: .gitattributes  codemirror-theme.css  fontawesome-all.css  fontawesome-all.min.css
eggwiki/static/js/: eggwiki.js  halfmoon.js  (+1 more)
eggwiki/templates/: about.html  admin.html  admin_notification.txt  approvement_notification.txt  confirm_email.txt  editor.html  layout.html  preview.html  recover_password.txt  register.txt  syntax.html  wiki.html
otterwiki/: about.md  auth.py  gitstorage.py  helper.py  initial_home.md  plugins.py  preferences.py  profiler.py  server.py  wiki.py
otterwiki/static/docs/plugin_examples/plugin_authorsignature/: pyproject.toml
otterwiki/templates/: about.html  editor.html  layout.html  pageindex.html
tests/: conftest.py  example.md  test_auth.py  test_essentials.py  test_gitstorage.py  test_helper.py  test_otterwiki.py  test_preview.py  test_renderer.py  test_settings.py  test_util.py
(+21 files in other folders)
